# gst_rtp_image_receiver

./: .cppcheck_suppressions  .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
config/: camera_info.yaml
examples/: main.cpp
include/: image_receiver.h  rtp_image_receiver.hpp
launch/: multi_camera-c1-compressed.launch.xml  multi_camera-c1-raw.launch.xml  multi_camera-c1.launch.xml  multi_camera.launch  multi_camera.launch.xml  multi_camera_nodelet.launch  rtp_image_receiver.launch  rtp_image_receiver.launch.py  rtp_image_receiver.launch.xml  rtp_image_receiver_nodelet.launch
src/: image_receiver.cpp  image_receiver_impl.cpp  rtp_image_receiver.cpp  rtp_image_receiver_node.cpp  rtp_receiver_nodelet.cpp
tests/: CMakeLists.txt  test_image_receiver.cpp
