<?xml version="1.0"?>
<package format="2">
  <name>gst_rtp_image_receiver</name>
  <version>1.0.0</version>
  <description>ROS1 node for real-time image processing from RTP/UDP streams</description>
  <maintainer email="ceyhun.bilir@adastec.com">Ahmet Ceyhun Bilir</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>compressed_image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
</package>